--- a/style.css
+++ b/style.css
@@ -9,3 +9,77 @@ body {
   height: 100%;
   width: 100%;
 }
+.main_section {
+  width: 100%;
+  height: 100vh;
+  background-color: #000011;
+}
+
+.container {
+  background-color: aliceblue;
+  width: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 26px 23px 26px 23px;
+  border: 1px solid #fff;
+  border-radius: 13px;
+  box-shadow: rgb(0 0 0) 3px 3px 6px 0px inset,
+    rgb(102 102 102 / 50%) -3px -3px 6px 1px inset;
+}
+.container p {
+  font-size: 20px;
+  font-weight: 900;
+  line-height: 43px;
+}
+
+.container input {
+  width: 100%;
+  border: 1px solid #000;
+  border-radius: 6px;
+  height: 36px;
+  padding: 13px;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.container button {
+  padding: 7px 29px 7px 29px;
+  margin-top: 16px;
+  border: 1px solid #000;
+  border-radius: 4px;
+  background: linear-gradient(337deg, #000000, #005fdc);
+  color: #fff;
+  font-size: 14px;
+  width: 100%;
+  transition: all linear 0.9s;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  font-weight: 900;
+  transition: all linear 0.9s;
+}
+
+.container button:hover {
+  background: linear-gradient(136deg, #000000, #005fdc);
+  border: 1px solid #fff;
+  box-shadow: rgb(0 0 0) 3px 3px 6px 0px inset,
+    rgb(82 0 0 / 50%) -3px -3px 6px 1px inset;
+  transition: all linear 0.9s;
+}
+#img_box {
+  width: 200px;
+  overflow: hidden;
+  max-height: 0;
+  text-align: center;
+  transition: max-height 1s;
+  margin: 0 auto;
+}
+#img_box img {
+  width: 100%;
+  padding: 20px;
+}
+#img_box.show-img {
+  max-height: 300px;
+  padding: 13px;
+  text-align: center;
+}
