--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
   width: 100%;
   height: 100vh;
   background-color: #000011;
+  position: fixed;
 }
 
 .container {
@@ -27,6 +28,7 @@ body {
   border-radius: 13px;
   box-shadow: rgb(0 0 0) 3px 3px 6px 0px inset,
     rgb(102 102 102 / 50%) -3px -3px 6px 1px inset;
+  margin: 0px 12px 0px 12px;
 }
 .container p {
   font-size: 20px;
