--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
   box-shadow: rgb(0 0 0) 3px 3px 6px 0px inset,
     rgb(102 102 102 / 50%) -3px -3px 6px 1px inset;
   margin: 0px 12px 0px 12px;
-  width: auto;
+  width: 350px;
 }
 .container p {
   font-size: 20px;
