--- a/style.css
+++ b/style.css
@@ -14,6 +14,8 @@ body {
   height: 100vh;
   background-color: #000011;
   position: fixed;
+  overflow: hidden;
+  padding: 20px;
 }
 
 .container {
